<resources>
    <string name="app_name">PICT</string>
    <string name="welcome">WELCOME</string>
    <string name="email">EMAIL</string>
    <string name="pass">PASSWORD</string>
    <string name="signin">SIGN_IN</string>
    <string name="signup">REGISTER</string>
    <string name="forgotPass">FORGOT_PASSSWORD?</string>
    <string name="name">NAME</string>
    <string name="Contact">MOBILE_NO</string>
    <string name="Class">CLASS</string>
    <string name="Roll">ROLL_NO</string>
    <string name="div">DIVISION</string>
    <string name="dpt">DEPARTMENT</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="reg">REGISTRATION</string>
    <string name="reset">RESET PASSWORD</string>
    <string name="emailenter">Enter your mail Id</string>
    <string name="back">BACK</string>
    <string name="emailresest">RESET PASSWORD</string>
    <string name="sendpass">SEND PASSWORD ON EMAIL</string>
    <string name="action_settings">Settings</string>
    <string name="att">ATTENDANCE</string>
    <string name="lost">LOST_FOUND</string>
    <string name="help">HELP</string>
    <string name="event">EVENT</string>
    <string name="event_name">EVENT NAME</string>
    <string name="topic">TOPIC</string>
    <string name="conduct">CONDUCTOR</string>
    <string name="venue">VENUE</string>
    <string name="time">TIME</string>
    <string name="desc">ABOUT EVENT</string>
    <string name="save">SAVE</string>
    <string name="school">SCHOOL</string>
    <string name="birthdate">BIRTH_DATE</string>
    <string name="date">DATE</string>
    <string name="add">ADDRESS</string>
    <string name="Parentcontact">PARENT_CONTACT</string>
    <string name="intereset">INTERESTED IN</string>
    <string name="wantBecome">I WANT TO BECOME</string>
    <string name="referby">REFER BY</string>
    <string name="enquiry">ENQUIRY</string>
    <string name="join">WANT TO JOIN BY DATE</string>
    <string-array name="Colour">
        <item> red</item>
        <item>blue</item>
        <item>Green</item>
        <item>White</item>
        <item>Black</item>
        <item>Yellow</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Orange</item>
        <item>Voilet</item>
        <item>Pink</item>
    </string-array>
</resources>
